@@ -1,5 +1,6 @@
 /* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*- */
 /*
+ * Copyright (C) 2005       Imendio AB
  * Copyright (C) 2001-2003  CodeFactory AB
  * Copyright (C) 2001-2003  Richard Hult <richard@imendio.com>
  * Copyright (C) 2001-2002  Mikael Hallendal <micke@imendio.com>
